docs/pages/versions/v50.0.0/sdk/local-authentication.mdx
---
title: LocalAuthentication
description: A library that provides functionality for implementing the Fingerprint API (Android) or FaceID and TouchID (iOS) to authenticate the user with a face or fingerprint scan.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-50/packages/expo-local-authentication'
packageName: 'expo-local-authentication'
iconUrl: '/static/images/packages/expo-local-authentication.png'
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import PlatformsSection from '~/components/plugins/PlatformsSection';
import { AndroidPermissions, IOSPermissions } from '~/components/plugins/permissions';
import {
  ConfigReactNative,
  ConfigPluginExample,
  ConfigPluginProperties,
} from '~/ui/components/ConfigSection';

`expo-local-authentication` allows you to use the Biometric Prompt (Android) or FaceID and TouchID (iOS) to authenticate the user with a fingerprint or face scan.

<PlatformsSection android emulator ios simulator />

## Installation

<APIInstallSection />

## Configuration in app config

You can configure `expo-local-authentication` using its built-in [config plugin](/config-plugins/introduction/) if you use config plugins in your project ([EAS Build](/build/introduction) or `npx expo run:[android|ios]`). The plugin allows you to configure various properties that cannot be set at runtime and require building a new app binary to take effect.

<ConfigPluginExample>

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-local-authentication",
        {
          "faceIDPermission": "Allow $(PRODUCT_NAME) to use Face ID."
        }
      ]
    ]
  }
}
```

</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'faceIDPermission',
      platform: 'ios',
      description:
        'A string to set the [`NSFaceIDUsageDescription`](#permission-nsfaceidusagedescription) permission message.',
      default: '"Allow $(PRODUCT_NAME) to use Face ID"',
    },
  ]}
/>

<ConfigReactNative>

If you're not using Continuous Native Generation ([CNG](/workflow/continuous-native-generation/)) or you're using a native **ios** project manually, then you need to add `NSFaceIDUsageDescription` key to your **ios/[app]/Info.plist**:

```xml Info.plist
<key>NSFaceIDUsageDescription</key>
<string>Allow $(PRODUCT_NAME) to use FaceID</string>
```

</ConfigReactNative>

## API

```js
import * as LocalAuthentication from 'expo-local-authentication';
```

<APISection packageName="expo-local-authentication" apiName="LocalAuthentication" />

## Permissions

### Android

The following permissions are added automatically through this library's **AndroidManifest.xml**:

<AndroidPermissions permissions={['USE_BIOMETRIC', 'USE_FINGERPRINT']} />

### iOS

The following usage description keys are used by this library:

<IOSPermissions permissions={['NSFaceIDUsageDescription']} />
